# pyxu-ldct-reader

./: .pre-commit-config.yaml  AUTHORS  ChangeLog  LICENSE  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
doc/: conf.py  example.ipynb  index.rst  nitpick-exceptions  references.rst
doc/api/: index.rst  math.rst  opt.solver.rst
doc/examples/: example.ipynb  index.rst
doc/guide/: example.ipynb  example_gd.ipynb  index.rst
src/pyxu_ldct_reader/: __init__.py  dicom_utils.py  geometry_utils.py  mayo_dicom_dict.py  reader.py
