[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

# Metadata ====================================================================
[project]
name = "pyxu_ldct_reader"
dynamic = ["version"]
description = "Data loader that reads and parses clinical CT sinograms in the LDCT-and-Projection-data repository and map them to Pyxu's XRayTransform"
readme = "README.rst"
requires-python = ">= 3.10, < 3.13"
license = "MIT"
authors = [
    { name = "Joan Rue Queralt", email = "joan.rue.q@gmail.com" },
]
classifiers = [
    "Framework :: Pycsou",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
urls.download = "https://github.com/EPFL-Center-for-Imaging/pyxu-ldct-reader"
dependencies = [
    # "pyxu >= 2.0, < 3",
    "pyxu",
    "pydicom",
]

# entry_points; Note the `_` underscore to overload a base Pyxu class.


# Optional dependencies =======================================================
[project.optional-dependencies]
dev = [ "pyxu[dev]", ]

# Get version info from Git ===================================================
[tool.hatch.version]
source = "vcs"

# sdist/wheel config ==========================================================
[tool.hatch.build]
exclude = [
    "/dev",
    "/doc",
    "/src/pyxu_ldct_reader_tests",
]
include = [
    "/src",
]
packages = [
    "src/pyxu_ldct_reader",
]