[metadata]
name = pyxu-ldct-reader
description = Data loader that reads and parses clinical CT sinograms in the LDCT-and-Projection-data repository and map them to Pyxu's XRayTransform
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/EPFL-Center-for-Imaging/pyxu-ldct-reader
author = Joan Rue Queralt
author_email = joan.rue.q@gmail.com
license = MIT
license_files = LICENSE
classifiers = 
	Framework :: Pycsou
	Development Status :: 1 - Planning
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Topic :: Scientific/Engineering :: Image Processing
project_urls = 
	Bug Tracker = https://github.com/EPFL-Center-for-Imaging/pyxu-ldct-reader/issues
	Documentation = https://github.com/EPFL-Center-for-Imaging/pyxu-ldct-reader#README.md
	Source Code = https://github.com/EPFL-Center-for-Imaging/pyxu-ldct-reader
	User Support = https://github.com/EPFL-Center-for-Imaging/pyxu-ldct-reader/issues

[options]
install_requires = 
	pyxu
	pydicom
python_requires = >= 3.10, < 3.13
include_package_data = True
package_dir = 
	= src
setup_requires = setuptools_scm

[options.entry_points]

[options.extras_require]

[flake8]
max-complexity = 10
exclude = 
	__init__.py
extend-ignore = 
	E501
	E203
	E302
	
	E731
	
	E266
	
	C901

